--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plano Inclinado</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>plano inclinado</h1>
-    <p class="descripcion">calculadora para obtener algunas componentes de un cuerpo en un plano inclinado :)</p>
+    <h1>plano Inclinado</h1>
+    <p class="descripcion">Calculadora para obtener algunas componentes de un cuerpo en un plano inclinado :)</p>
     <br>
     <form id="calcForm">
         <div class="input-group">
@@ -27,11 +27,10 @@
             <label for="angulo" class="label">ángulo</label>
             <input type="number" id="angulo" class="input" step="0.1" required>
         </div>
-        <br>
     </form>
     <br>
-        <button type="button" onclick="calcular()">calcular</button>
-    <h2>resultados</h2>
+    <button type="button" onclick="calcular()">calcular</button>
+    <h2>Resultados</h2>
     <p id="resultados"></p>
 </body>
 </html>
